alpm-types/src/version/snapshots/buildtool::invalid_buildtool_version@case_1_full_version_with_architecture.snap
---
source: alpm-types/src/version/buildtool.rs
---
Parser failed with the following error:
error: invalid buildtool version
 | 
 | 1.0.0-any
 |      ^ expected a stand-alone minimal alpm-package-version
